--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 psycopg2-binary = "*"
 django-crispy-forms = "*"
 django-sendgrid-v5 = "*"
+fake = "*"
 
 [requires]
 python_version = "3.6"
